# pdf-chat

./: README.md  add_to_db.py  firecrawl_scraping.py  get_embedding_function.py  main.py  pyproject.toml  query_data.py  test_runs.ipynb
chroma/: chroma.sqlite3
