[project]
name = "pdf-chat"
version = "0.1.0"
description = "This is a simple locally run CLI app that allows you to chat with your PDFs, it uses OLLAMA as the provider for embedding model and LLM model for the time being"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.13",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-ollama>=0.3.3",
    "ollama>=0.5.1",
    "pypdf>=5.6.0",
    "pytest>=8.4.1",
]
